simplify the externalid fields
